gcc/testsuite/rust/rustc/ui/methods/suggest-method-on-call-with-macro-rcvr.rs
// issue: 114131

fn main() {
    let hello = len(vec![]);
// { dg-error ".E0425." "" { target *-*-* } .-1 }
}

